test/langtools/tools/javac/patterns/PatternErrorRecovery.out
PatternErrorRecovery.java:11:18: compiler.err.pattern.expected
1 error
